--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Název stránky</title>
-    </head>
+<html lang="cs">
+    
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Muj Git</title>
+<head>
+
     <body>
         <p>Text na stránce</p>
     </body>
